--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,21 @@
 {
   "name": "luizfilipezs/container",
-  "description": "Dependency injection system",
+  "description": "Dependency injection container",
   "type": "library",
   "license": "MIT",
+  "authors": [
+    {
+      "name": "Luiz Filipe da Silva",
+      "email": "filipeluiz.bs@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "^8.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^12.0",
+    "friendsofphp/php-cs-fixer": "^3.0"
+  },
   "autoload": {
     "psr-4": {
       "Luizfilipezs\\Container\\": "src/"
@@ -13,14 +26,6 @@
       "Luizfilipezs\\Container\\Tests\\": "tests/"
     }
   },
-  "authors": [
-    {
-      "name": "Luiz Filipe da Silva",
-      "email": "filipeluiz.bs@gmail.com"
-    }
-  ],
-  "require-dev": {
-    "phpunit/phpunit": "^12.0",
-    "friendsofphp/php-cs-fixer": "^3.0"
-  }
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
